[package]
name = "plex-list"
version = "0.1.3"
description = "List Plex activity via a Tautulli (Plexpy) Server"
readme = "README.md"
edition = "2018"
authors = ["Mike Zeller <mike@mikezeller.net>"]
repository = "https://github.com/papertigers/pls"
keywords = ["plex", "plexpy", "tautulli", "cli"]
license = "MIT"
categories = [
	"command-line-utilities"
]

[[bin]]
name = "pls"
path = "src/main.rs"

[dependencies]
reqwest = "0.9.10"
clap = "2.32.0"
failure = "0.1.5"
serde_json = "1.0.38"
serde = { version = "1.0.88", features = ["derive"] }
console = "0.7.5"
dirs = "1.0.5"
toml = "0.5.1"
serde_repr = "0.1.4"
unicode-width = "0.1.5"
