[package]
name = "plex-list"
version = "0.1.7"
description = "List Plex activity via a Tautulli (Plexpy) Server"
readme = "README.md"
edition = "2018"
authors = ["Mike Zeller <mike@mikezeller.net>"]
repository = "https://github.com/papertigers/pls"
keywords = ["plex", "plexpy", "tautulli", "cli"]
license = "MIT"
categories = [
	"command-line-utilities"
]

[[bin]]
name = "pls"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
anyhow = "1.0"
serde_json = "1.0.38"
console = "0.11.2"
dirs = "1.0.5"
toml = "0.5.1"
serde_repr = "0.1.4"
unicode-width = "0.1.5"
unicode-truncate = "0.1.1"

[dependencies.reqwest]
version = "0.11.9"
features = ["blocking", "json", "native-tls-vendored"]

[dependencies.serde]
version = "1.0.88"
features = ["derive"]
